@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2011 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -54,8 +54,8 @@ package javax.mail;
 
 public final class PasswordAuthentication {
 
-    private String userName;
-    private String password;
+    private final String userName;
+    private final String password;
 
     /** 
      * Initialize a new PasswordAuthentication
